# stellar-zk-proof-of-solvency

./: .gitignore  CLAUDE.md  DEMO.md  README.md  SKILLS.md  index.html  solvency_demo.wasm
.claude/skills/verify-soroban/: SKILL.md
assets/: index-1qx50LHe.js
circuits/: build.sh  input.json  input_insolvent.json  package-lock.json  package.json  solvency_demo.circom
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/data/solvency/: proof.json  public.json  verification_key.json
contracts/groth16-verifier/src/: lib.rs  test_solvency.rs
contracts/groth16-verifier/test_snapshots/test_solvency/: verify_and_attest_records_attestation.1.json
docs/: SPEC.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/contract-client/: README.md
web/src/: bindings.ts  encode.js  main.js
